--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Your Name / Site Title"
+title                    : "William Fang / 方彦丰"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
@@ -24,10 +24,10 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Yanfeng (William) Fang"
+  name             : "William Fang"
   pronouns         : # example: "he/him"  
   bio              : "B.Sc., M.A., Economics"
-  location         : "Vancouver, Canada / Shenzhen, China"
+  location         : "Vancouver🇨🇦 / Shenzhen🇨🇳"
   employer         : "University of British Columbia"
   uri              : # URL
   email            : "willfyf@gmail.com" 
