Change Flickr URL format in configuration
Updated Flickr URL to a relative path.

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   # Social media
   artstation       : # Username
   facebook         : # Username
-  flickr           : "https://www.flickr.com/photos/202753897@N08/"
+  flickr           : "photos/202753897@N08/"
 
 
 # Publication Category - The following the list of publication categories and their headings
