Change email and clean up social media entries
Updated email address and removed unused social media fields.

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   location         : "Vancouver🇨🇦 / Shenzhen🇨🇳"
   employer         : "University of British Columbia"
   uri              : # URL
-  email            : "willfyf@gmail.com" 
+  email            : "fangyfwill@qq.com" 
 
   # Academic websites
   academia         : # URL
@@ -42,13 +42,6 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "will-yanfeng-fang.github.io"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
-
-  # Social media
-  artstation       : # Username
-  facebook         : # Username
-  flickr           : "photos/202753897@N08/"
 
 
 # Publication Category - The following the list of publication categories and their headings
