--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/will-yanfeng-fang"
+  github           : "will-yanfeng-fang"
 
 
 # Publication Category - The following the list of publication categories and their headings
