--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,18 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
+  - title: "Writing"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Teaching"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Notes"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "CV"
     url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
-    
-  - title: "Guide"
-    url: /markdown/
+  
